add defaultCalendear feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
-  riverpod: ^2.2.0
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
