--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.5
   table_calendar: ^3.0.9
+  flutter_hooks: ^0.18.6
+  hooks_riverpod: ^2.3.2
 
 dev_dependencies:
   flutter_test:
