--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   table_calendar: ^3.0.9
   flutter_riverpod: ^2.3.2
+  flutter_hooks: ^0.18.6
 
 dev_dependencies:
   flutter_test:
