--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
 
 
 dependencies:
@@ -18,6 +18,10 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_riverpod: ^2.3.2
   flutter_hooks: ^0.18.6
+  firebase_core: ^2.9.0
+  intl: ^0.18.0
+  firebase_auth: ^4.2.0
+
 
 dev_dependencies:
   flutter_test:
