--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   intl: ^0.18.0
   firebase_auth: ^4.2.0
   cloud_firestore: ^4.5.1
+  riverpod_generator: ^2.2.6
+  freezed_annotation: ^2.2.0
 
 
 dev_dependencies:
@@ -29,6 +31,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  freezed: ^2.4.2
+  build_runner: ^2.3.3
 
 flutter:
 
