--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 
 dependencies:
@@ -23,8 +23,9 @@ dependencies:
   firebase_auth: ^4.2.0
   cloud_firestore: ^4.5.1
   riverpod_generator: ^2.2.6
+  riverpod_annotation: ^2.1.4
   freezed_annotation: ^2.2.0
-
+  hooks_riverpod: ^2.4.1
 
 dev_dependencies:
   flutter_test:
