--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.5+1
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -34,6 +34,16 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   freezed: ^2.4.2
   build_runner: ^2.3.3
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/wm_app_icon.png"
+
+flutter_native_splash:
+  image: "assets/images/wm_app_icon.png"
 
 flutter:
 
