--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_workout_manager">
    <application
-        android:label="flutter_workout_manager"
+        android:label="WorkoutManager"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
