--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.5+1
+version: 1.0.1+1
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -26,6 +26,7 @@ dependencies:
   riverpod_annotation: ^2.1.4
   freezed_annotation: ^2.2.0
   hooks_riverpod: ^2.4.1
+  google_mobile_ads: ^4.0.0
 
 dev_dependencies:
   flutter_test:
